; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_next4.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_next4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cidr = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cidr*, %struct.cidr*)* @cidr_next4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cidr_next4(%struct.cidr* %0, %struct.cidr* %1) #0 {
  %3 = alloca %struct.cidr*, align 8
  %4 = alloca %struct.cidr*, align 8
  %5 = alloca %struct.cidr*, align 8
  store %struct.cidr* %0, %struct.cidr** %3, align 8
  store %struct.cidr* %1, %struct.cidr** %4, align 8
  %6 = load %struct.cidr*, %struct.cidr** %3, align 8
  %7 = call %struct.cidr* @cidr_clone(%struct.cidr* %6)
  store %struct.cidr* %7, %struct.cidr** %5, align 8
  %8 = load %struct.cidr*, %struct.cidr** %4, align 8
  %9 = getelementptr inbounds %struct.cidr, %struct.cidr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cidr*, %struct.cidr** %5, align 8
  %12 = getelementptr inbounds %struct.cidr, %struct.cidr* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.cidr*, %struct.cidr** %4, align 8
  %14 = getelementptr inbounds %struct.cidr, %struct.cidr* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = sub nsw i32 32, %15
  %17 = shl i32 1, %16
  %18 = call i64 @htonl(i32 %17)
  %19 = load %struct.cidr*, %struct.cidr** %5, align 8
  %20 = getelementptr inbounds %struct.cidr, %struct.cidr* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %24, %18
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %22, align 4
  ret i32 1
}

declare dso_local %struct.cidr* @cidr_clone(%struct.cidr*) #1

declare dso_local i64 @htonl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
